--- a/qml.qrc
+++ b/qml.qrc
@@ -4,5 +4,6 @@
         <file>qml/Playground.qml</file>
         <file>qml/InformationPanel.qml</file>
         <file>qml/Board.qml</file>
+        <file>qml/Tile.qml</file>
     </qresource>
 </RCC>
