--- a/images.qrc
+++ b/images.qrc
@@ -6,5 +6,6 @@
         <file>images/tanks/player/simple_tank.png</file>
         <file>images/tanks/player/three_stars_tank.png</file>
         <file>images/tanks/player/two_stars_tank.png</file>
+        <file>images/projectiles/projectile.png</file>
     </qresource>
 </RCC>
