Implement tank hitting

--- a/qml.qrc
+++ b/qml.qrc
@@ -7,5 +7,6 @@
         <file>qml/Tile.qml</file>
         <file>qml/PlayerTank.qml</file>
         <file>qml/Projectile.qml</file>
+        <file>qml/EnemyTank.qml</file>
     </qresource>
 </RCC>
