--- a/images.qrc
+++ b/images.qrc
@@ -13,5 +13,7 @@
         <file>images/explosions/projectile_explosion.gif</file>
         <file>images/explosions/tank_explosion.gif</file>
         <file>images/control_panel/enemy_marker.png</file>
+        <file>images/control_panel/flag.png</file>
+        <file>images/control_panel/player_marker.png</file>
     </qresource>
 </RCC>
