--- a/images.qrc
+++ b/images.qrc
@@ -21,5 +21,11 @@
         <file>images/tanks/enemy/armored_1_hit.png</file>
         <file>images/tanks/enemy/armored_2_hit.png</file>
         <file>images/tanks/enemy/armored_3_hit.png</file>
+        <file>images/bonuses/grenade.png</file>
+        <file>images/bonuses/helmet.png</file>
+        <file>images/bonuses/shovel.png</file>
+        <file>images/bonuses/star.png</file>
+        <file>images/bonuses/timer.png</file>
+        <file>images/bonuses/tank.png</file>
     </qresource>
 </RCC>
